--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link" href="#">Disabled</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -36,6 +36,49 @@
         </div>
     </div>
 </nav>
+<section class="container">
+    <div class="row">
+        <div class="col-3"><abbr>abbr</abbr>
+            <small>Tag small
+                <mark>Tag Mark</mark>
+            </small>
+        </div>
+        <div class="col-6"><code>function</code><kbd>alt + q</kbd></div>
+        <div class="col-3">hello 3</div>
+    </div>
+</section>
+<section>
+    <div class="row">Bootstrap Colors</div>
+    <div class="container-fluid row">
+        <div class="col-1 bg-info"></div>
+        <div class="col-1 bg-danger"></div>
+        <div class="col-1 bg-warning"></div>
+        <div class="col-1 bg-faded"></div>
+        <div class="col-1 bg-inverse"></div>
+        <div class="col-1 bg-primary"></div>
+        <div class="col-1 bg-info"></div>
+        <div class="col-1 bg-danger"></div>
+        <div class="col-1 bg-warning"></div>
+        <div class="col-1 bg-faded"></div>
+        <div class="col-1 bg-inverse"></div>
+        <div class="col-1 bg-primary"></div>
+    </div>
+</section>
+<div class="container m-4">
+    <div class="row">
+        <div class="col-3"> one</div>
+        <div class="col-3 alert alert-danger">
+            <a class="alert-link" href="#">this Alert danger</a>
+        </div>
+        <div class="col-3 alert alert-dismissible fade show alert-success">
+            <a class="alert-link" href="#">this Alert success</a>
+        </div>
+        <div class="col-3 alert alert-warning alert-dismissable fade show">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong>Success!</strong> Warning
+        </div>
+    </div>
+</div>
 
 </body>
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
