--- a/index.html
+++ b/index.html
@@ -458,6 +458,80 @@
     </div>
 </section>
 
+<!--Nav Menus -->
+<section class="container">
+    <div class="row h2">
+        Nav Menus
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <ul class="nav nav-pills nav-justified">
+                <li class="nav-item">
+                    <a href="#" class="nav-link active">Link 1</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Link Dropdown</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Link</a>
+                        <a class="dropdown-item" href="#">Link</a>
+                        <a class="dropdown-item" href="#">Link</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link disabled">Disable</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-12">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" href="#home" data-toggle="tab">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#menu1" data-toggle="tab">Menu1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#menu2" data-toggle="tab">Menu2</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane container active" id="home">
+                    <h2>Home tab pane</h2>
+                </div>
+                <div class="tab-pane container" id="menu1">
+                    <h2>Menu 1 tab pane</h2>
+                </div>
+                <div class="tab-pane container" id="menu2">
+                    <h2>Menu 2 tab pane</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<!--Nav Bar-->
+<section class="container">
+
+    <nav class="navbar  navbar-toggleable-sm bg-inverse navbar-inverse">
+            <div class="navbar-brand">
+                WACh
+                <img  style="width:40px;" src="img/avatar.jpg">
+            </div>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Link 1 Active</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link 3</a>
+            </li>
+        </ul>
+
+    </nav>
+</section>
 </body>
 <script src="js/main.js"></script>
 </html>`
