--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" href="#">
-                    <div class="row">
+                    <div>
                         <button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#myModal">
                             Hello
                         </button>
@@ -29,10 +29,10 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h3>WACh</h3>
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
+
                                         <img src="img/avatar.jpg" width="50">
                                     </div>
                                     <div class="modal-footer">
@@ -130,11 +130,9 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
-
 </body>
 <script src="js/main.js"></script>
 
