--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div id="section4" class="bg-danger">
                 <div class="row">
                     <div id="demo" class="carousel slide img-thumbnail col-12" data-ride="carousel">
-
+                        <h2>Photos</h2>
                         <ul class="carousel-indicators">
                             <li data-target="#demo" data-slide-to="0" class="active"></li>
                             <li data-target="#demo" data-slide-to="1"></li>
